--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="stylee.css">
+    <link rel="stylesheet" href="newstyle.css">
 </head>
 
 <body>
